--- a/sell_furniture/src/index.html
+++ b/sell_furniture/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>SellFurniture</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
   <app-root></app-root>
