--- a/sell_furniture/src/index.html
+++ b/sell_furniture/src/index.html
@@ -11,6 +11,7 @@
 
   <!-- Cloudinary Widget -->
   <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+  <script src="https://media-library.cloudinary.com/global/all.js" type="text/javascript"></script>
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
