--- a/sell_furniture/src/index.html
+++ b/sell_furniture/src/index.html
@@ -9,15 +9,7 @@
     <!-- Content Security Policy -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="
-    default-src 'self';
-    script-src 'self' 'unsafe-inline' 'unsafe-eval' https://widget.cloudinary.com https://media-library.cloudinary.com https://cdnjs.cloudflare.com;
-    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com;
-    font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com;
-    img-src 'self' data: https: blob:;
-    connect-src 'self' https://sell-furniture-node.onrender.com https://res.cloudinary.com;
-    frame-src 'self' https://widget.cloudinary.com;
-  "
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://widget.cloudinary.com https://media-library.cloudinary.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://sell-furniture-node.onrender.com https://res.cloudinary.com; frame-src 'self' https://widget.cloudinary.com;"
     />
 
     <!-- Font Awesome -->
