--- a/sell_furniture/src/index.html
+++ b/sell_furniture/src/index.html
@@ -6,6 +6,12 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- Content Security Policy -->
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://*.cloudinary.com https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://*.cloudinary.com https://cdnjs.cloudflare.com https://fonts.googleapis.com; font-src 'self' https://cdnjs.cloudflare.com https://fonts.gstatic.com; img-src 'self' data: https: blob:; connect-src 'self' https://sell-furniture-node.onrender.com https://*.cloudinary.com; frame-src 'self' https://*.cloudinary.com; child-src 'self' https://*.cloudinary.com blob:;"
+    />
+
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
